[package]
name = "salt-spray"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "^1"
proc-macro2 = "^1"
regex = "^1"
serde = {version="^1", features=["derive"]}
serde_yaml = "^0"
syn = {version="^1", features=["extra-traits", "full"]}
